SERVER-23394: Prevent AuthorizationManager deadlock with profiling