src/mongo/db/auth/authorization_manager.cpp
@@ -716,8 +716,8 @@ void AuthorizationManager::_invalidateRelevantCacheData(const char* op,
 
 void AuthorizationManager::logOp(
     OperationContext* txn, const char* op, const char* ns, const BSONObj& o, const BSONObj* o2) {
-    _externalState->logOp(txn, op, ns, o, o2);
     if (appliesToAuthzData(op, ns, o)) {
+        _externalState->logOp(txn, op, ns, o, o2);
         _invalidateRelevantCacheData(op, ns, o, o2);
     }
 }
